0026292: Visualization - Parallelize queue-based BVH builders (subclasses of BVH_QueueBuilder)